18/01/08 -*- Version 1.7.0 -*-

11/12/08 Julien Dutheil
* Bug fixed in BioNJ.

10/12/08 Celine Scornavacca & Julien Dutheil
* Bug fixed int Node::getName and NodeException: no more recursive call!

07/12/08 Julien Dutheil
* New getRootFrequenciesSet in SubstitutionModelSet.
* New getStatesFrequenciesSet in MarkovModulatedFrequenciesSet.

04/12/08 Julien Dutheil
* Added a bit more options in tree length computation.

17/11/08 Julien Dutheil
* DistanceEstimation now allows to change the precision in the branch length
  estimation (no longer fixed to 0.0001, although it is still the default
	value).

10/11/08 Julien Dutheil
* Bug fixed in HomogeneousSequenceSimulator, ancestral root frequencies are
  not necessarily equal now!

04/11/08 Julien Dutheil
* New Strand-Symmetric subtituion mode from Lobry 1995.
* Numerical issue solved in GTR.

20/10/08 Bastien Boussau
* Bug fixed in PhylogeneticApplicationTools: now can run protein with covarion
models.

10/10/08 Julien Dutheil
* Bug fixed in FrequenciesSet when testing sum for frequencies.

18/01/08 -*- Version 1.6.0 -*-

12/09/08 Julien Dutheil
* Ancestral sequence reconstruction debugged and now allow sampling from the
  posterior distribution.
* PhylogeneticApplicationTools updated: observed frequencies are now set up
  in the 'initial values' methods.

11/09/08 Julien Dutheil
* Large update on TreeLikelihoodData and TreeParsimonyData to rely mostly on
  nodes id instead of Node*. Likelihood, parsimony and substitution mapping
	methods have been updated accordingly.
* Ancestral state reconstruction method has a new method to get a
  SequenceContainer with all sequences.

10/09/08 Sophie Abby
* Corrected memory leak in BipartitionList (delete -> delete[]).

02/09/08 Julien Dutheil
* Added "real" +F protein substitution models, with frequencies estimation.

18/01/08 -*- Version 1.5.1 -*-

01/06/08 Julien Dutheil
* Bug fixed in FrequenciesSet: the sum critierion was changed to be less
restrictive! (now 1e-6).
